--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>नवभारत संवाद - मराठी वृत्तपत्र | Navbharat Samvad - Marathi Newspaper</title>
-    <meta name="description" content="नवभारत संवाद - ताज्या बातम्या, राष्ट्रीय, राज्य, शहर, युवा, राजकारण, आरोग्य, क्रीडा, शिक्षण आणि अधिक. ई-पेपर, लेख, ब्लॉग आणि घटनांची माहिती. Navbharat Samvad - Latest Marathi news, e-paper, articles, blogs and events.">
-    <meta name="keywords" content="नवभारत संवाद, मराठी वृत्तपत्र, मराठी बातम्या, ई-पेपर, राष्ट्रीय बातम्या, राज्य बातम्या, शहर बातम्या, युवा बातम्या, राजकारण, आरोग्य, क्रीडा, शिक्षण, Navbharat Samvad, Marathi newspaper, Marathi news, e-paper">
+    <title>नव मंच - मराठी वृत्तपत्र | Nav Manch - Marathi Newspaper</title>
+    <meta name="description" content="नव मंच - ताज्या बातम्या, राष्ट्रीय, राज्य, शहर, युवा, राजकारण, आरोग्य, क्रीडा, शिक्षण आणि अधिक. ई-पेपर, लेख, ब्लॉग आणि घटनांची माहिती. Nav Manch - Latest Marathi news, e-paper, articles, blogs and events.">
+    <meta name="keywords" content="नव मंच, मराठी वृत्तपत्र, मराठी बातम्या, ई-पेपर, राष्ट्रीय बातम्या, राज्य बातम्या, शहर बातम्या, युवा बातम्या, राजकारण, आरोग्य, क्रीडा, शिक्षण, Nav Manch, Marathi newspaper, Marathi news, e-paper">
     <meta name="language" content="Marathi">
     <meta name="geo.region" content="IN-MH">
   
     <!-- Open Graph tags for social sharing -->
-    <meta property="og:title" content="नवभारत संवाद - मराठी वृत्तपत्र | Navbharat Samvad">
+    <meta property="og:title" content="नव मंच - मराठी वृत्तपत्र | Nav Manch">
     <meta property="og:description" content="ताज्या बातम्या, ई-पेपर, लेख, ब्लॉग आणि घटनांची माहिती. Latest Marathi news, e-paper, articles, blogs and events.">
-    <meta property="og:image" content="https://navbharatsamvad.com/logo.png">
-    <meta property="og:image:alt" content="नवभारत संवाद - मराठी वृत्तपत्र">
-    <meta property="og:url" content="https://navbharatsamvad.com">
+    <meta property="og:image" content="https://navmanch.com/logo.png">
+    <meta property="og:image:alt" content="नव मंच - मराठी वृत्तपत्र">
+    <meta property="og:url" content="https://navmanch.com">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="mr_IN">
     
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="नवभारत संवाद - मराठी वृत्तपत्र">
+    <meta name="twitter:title" content="नव मंच - मराठी वृत्तपत्र">
     <meta name="twitter:description" content="ताज्या बातम्या, ई-पेपर, लेख आणि ब्लॉग">
-    <meta name="twitter:image" content="https://navbharatsamvad.com/logo.png">
+    <meta name="twitter:image" content="https://navmanch.com/logo.png">
     
-    <link rel="canonical" href="https://navbharatsamvad.com/" />
+    <link rel="canonical" href="https://navmanch.com/" />
   </head>
   <body>
     <div id="root"></div>
@@ -53,18 +53,18 @@
 {
   "@context": "https://schema.org",
   "@type": "NewsMediaOrganization",
-  "@id": "https://navbharatsamvad.com",
-  "name": "नवभारत संवाद",
-  "alternateName": "Navbharat Samvad",
-  "url": "https://navbharatsamvad.com",
-  "logo": "https://navbharatsamvad.com/logo.png",
-  "description": "नवभारत संवाद हे एक मराठी वृत्तपत्र आहे जे राष्ट्रीय, राज्य, शहर, युवा, राजकारण, आरोग्य, क्रीडा, शिक्षण आणि इतर विविध विषयांवर ताज्या बातम्या प्रदान करते. Navbharat Samvad is a Marathi newspaper providing latest news on national, state, city, youth, politics, health, sports, education and various other topics.",
+  "@id": "https://navmanch.com",
+  "name": "नव मंच",
+  "alternateName": "Nav Manch",
+  "url": "https://navmanch.com",
+  "logo": "https://navmanch.com/logo.png",
+  "description": "नव मंच हे एक मराठी वृत्तपत्र आहे जे राष्ट्रीय, राज्य, शहर, युवा, राजकारण, आरोग्य, क्रीडा, शिक्षण आणि इतर विविध विषयांवर ताज्या बातम्या प्रदान करते. Nav Manch is a Marathi newspaper providing latest news on national, state, city, youth, politics, health, sports, education and various other topics.",
   "inLanguage": "mr",
-  "publishingPrinciples": "https://navbharatsamvad.com/about",
+  "publishingPrinciples": "https://navmanch.com/about",
   "sameAs": [
-    "https://www.facebook.com/navbharatsamvad",
-    "https://www.twitter.com/navbharatsamvad",
-    "https://www.instagram.com/navbharatsamvad"
+    "https://www.facebook.com/navmanch",
+    "https://www.twitter.com/navmanch",
+    "https://www.instagram.com/navmanch"
   ],
   "address": {
     "@type": "PostalAddress",
