--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Preload critical fonts for Marathi text -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600;700&display=swap" />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;500;600;700&display=swap" />
+    
     <title>नव मंच - मराठी वृत्तपत्र | Nav Manch - Marathi Newspaper</title>
     <meta name="description" content="नव मंच - ताज्या बातम्या, राष्ट्रीय, राज्य, शहर, युवा, राजकारण, आरोग्य, क्रीडा, शिक्षण आणि अधिक. ई-पेपर, लेख, ब्लॉग आणि घटनांची माहिती. Nav Manch - Latest Marathi news, e-paper, articles, blogs and events.">
     <meta name="keywords" content="नव मंच, मराठी वृत्तपत्र, मराठी बातम्या, ई-पेपर, राष्ट्रीय बातम्या, राज्य बातम्या, शहर बातम्या, युवा बातम्या, राजकारण, आरोग्य, क्रीडा, शिक्षण, Nav Manch, Marathi newspaper, Marathi news, e-paper">
