--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       gtag('config', 'G-8RKDFTHRWM');
     </script>
     <meta charset="UTF-8" />
+    <!-- Google Search Console verification -->
+    <meta name="google-site-verification" content="9EYPGNfReNhgGHGv-YQngXGCot6OzMgHrneZpM-493U" />
     <link rel="icon" type="image/x-icon" href="./black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
