--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <!-- Google Search Console verification -->
     <meta name="google-site-verification" content="9EYPGNfReNhgGHGv-YQngXGCot6OzMgHrneZpM-493U" />
-    <link rel="icon" type="image/x-icon" href="./black.png" />
+    <link rel="icon" type="image/x-icon" href="./logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Preload critical fonts for Marathi text -->
